# castorini-skills

./: CHANGELOG.md  CLAUDE.md  README.md
.agents/skills/castorini-cli-reference/: SKILL.md
.agents/skills/castorini-cli-reference/references/: envelope-schema.md
.agents/skills/castorini-install/: SKILL.md
.agents/skills/castorini-install/references/: extras.md
.agents/skills/castorini-pipeline/: SKILL.md
.agents/skills/castorini-release/: SKILL.md
.github/workflows/: release.yml
scripts/: install-skills.sh
scripts/ci-tools/: README.md  pyproject.toml
scripts/ci-tools/src/ci_tools/: __init__.py  cli.py  settings.py
scripts/ci-tools/src/ci_tools/commands/: __init__.py
scripts/ci-tools/src/ci_tools/commands/github/: __init__.py  cli.py
scripts/ci-tools/src/ci_tools/commands/release/: __init__.py  cli.py
skills/anserini-fatjar/: SKILL.md
skills/anserini-fatjar/agents/: openai.yaml
skills/anserini-fatjar/scripts/: fetch_latest_fatjar.sh  verify_fatjar_workflow.sh
skills/castorini-cli-reference/: SKILL.md
skills/castorini-cli-reference/references/: artifact-shape.md  envelope-schema.md  shared-flags.md
skills/castorini-install/: SKILL.md
skills/castorini-onboard/: SKILL.md
skills/castorini-onboard/references/: extras.md  install-recipes.md
skills/castorini-pipeline/: SKILL.md
skills/castorini-pipeline/references/: pipeline-walkthrough.md  stage-handoffs.md
skills/castorini-release/: SKILL.md
skills/castorini-release/references/: pypi-checklist.md  release-sequence.md
skills/install-all/: SKILL.md
(+4 files in other folders)
