[project]
name = "ci-tools"
version = "0.1.0"
description = "CI tooling for the Castorini agent-skills repository"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "loguru>=0.7.2",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.1",
  "typer>=0.15.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
]

[project.scripts]
ci-tools = "ci_tools.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ci_tools"]
